# chiptune_music_maker

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
docs/: ChiptuneTracker_Guide.html
src/: AudioEngine.cpp  AudioEngine.h  Effects.h  FileIO.h  Sequencer.h  Synthesizer.h  Types.h  UI.h  main.cpp
